# tooloftools

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_user_identity_columns.py
docs/: AUTH.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: auth.ts  client.ts  mcp.ts  metrics.ts  tools.ts
frontend/src/components/layout/: AppLayout.tsx  ProtectedRoute.tsx
frontend/src/components/tools/: CurlImportSection.tsx
frontend/src/components/ui/: button.tsx  card.tsx  hint.tsx
frontend/src/lib/: auth-context.tsx  parse-curl.test.ts  parse-curl.ts  tool-form-defaults.ts
frontend/src/pages/: AdminPage.tsx  CatalogPage.tsx  LoginPage.tsx  McpGuidePage.tsx  McpPlaygroundPage.tsx  MetricsPage.tsx  OidcCallbackPage.tsx  RegisterPage.tsx  ToolDetailPage.tsx  ToolFormPage.tsx
frontend/src/types/: index.ts
seed/: sample_tools.json  seed_tools.py
src/app/: main.py
src/app/api/: deps.py
src/app/core/: config.py  database.py  logging.py  security.py
src/app/mcp/: invocation_gateway.py  server.py  translator.py
src/app/middleware/: logging.py  metrics.py  request_id.py
src/app/models/: tool.py  user.py
src/app/schemas/: tool.py
src/app/services/: identity_bootstrap.py  registry_service.py  schema_validator.py
tests/: conftest.py
tests/integration/: test_auth.py  test_health.py  test_tools.py
tests/unit/: test_schema_validator.py  test_security.py
(+6 files in other folders)
